--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,5 +30,10 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "vite": "^7.0.4"
-  }
+  },
+      
+    "engines": {
+      "node": ">=16"
+    }
+
 }
